--- a/README.adoc
+++ b/README.adoc
@@ -24,7 +24,7 @@ First you'll need to setup a Java project for Maven to build. To keep the focus 
 include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/main/create_directory_structure_hello.adoc[]
 
 
-Within the `src/main/java/hello` directory, you can create any Java classes you want. To maintain consistency with the rest of this guide, create these two classes: `HelloWorld.java` and `Greeter.java`.
+Within the `src/main/java/hello` directory, you can create any Java classes you want. To maintain consistency with the rest of this guide, create these two classes: `HelloWorld.java` and Greeter.java.
 
 `src/main/java/hello/HelloWorld.java`
 [source,java,tabsize=2]
